--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ attrs==22.2.0
 backcall==0.2.0
 beautifulsoup4==4.11.2
 bleach==6.0.0
+certifi==2022.12.7
 cffi==1.15.1
+charset-normalizer==3.0.1
 comm==0.1.2
 debugpy==1.6.6
 decorator==5.1.1
@@ -68,6 +70,7 @@ PyYAML==6.0
 pyzmq==25.0.0
 qtconsole==5.4.0
 QtPy==2.3.0
+requests==2.28.2
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 Send2Trash==1.8.0
@@ -81,6 +84,7 @@ tornado==6.2
 tqdm==4.64.1
 traitlets==5.9.0
 uri-template==1.2.0
+urllib3==1.26.14
 wcwidth==0.2.6
 webcolors==1.12
 webencodings==0.5.1
