--- a/requirements.txt
+++ b/requirements.txt
@@ -87,12 +87,14 @@ shapely==2.0.1
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.4
+SQLAlchemy==2.0.6
 stack-data==0.6.2
 terminado==0.17.1
 tinycss2==1.2.1
 tornado==6.2
 tqdm==4.64.1
 traitlets==5.9.0
+typing_extensions==4.5.0
 uri-template==1.2.0
 urllib3==1.26.14
 wcwidth==0.2.6
