--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -25,7 +25,7 @@ jobs:
           python-version: 3.10.6 #install the python needed
       - name: Install requirements
         run: |
-          pip install -r /requirements.txt 
+          pip install -r requirements.txt 
       - name: Track coverage of counties per state, and overwrite to readme
         run: |
           python code/coverage.py -i data/fips_county.csv -d data/state_county -r README.md
