--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -37,7 +37,7 @@ jobs:
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           git add .
-          git commit -m "Automated manifest update"
+          git commit -m "Automated coverage update"
       - name: Push changes # push the output folder to your repo
         uses: ad-m/github-push-action@master
         with:
