--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ argon2-cffi-bindings==21.2.0
 arrow==1.2.3
 asttokens==2.2.1
 attrs==22.2.0
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+backcall==0.2.0
 beautifulsoup4==4.11.2
 bleach==6.0.0
 censusgeocode==0.5.2
@@ -16,12 +16,12 @@ charset-normalizer==3.0.1
 click==8.1.3
 click-plugins==1.1.1
 cligj==0.7.2
-comm @ file:///croot/comm_1671231121260/work
+comm==0.1.2
 contextily==1.3.0
 contourpy==1.1.0
 cycler==0.11.0
 debugpy==1.6.6
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
+decorator==5.1.1
 defusedxml==0.7.1
 executing==1.2.0
 fastjsonschema==2.16.2
@@ -31,7 +31,6 @@ fqdn==1.5.1
 geographiclib==2.0
 geopandas==0.12.2
 geopy==2.3.0
-greenlet==2.0.2
 idna==3.4
 ipykernel==6.21.2
 ipython==8.10.0
@@ -55,7 +54,7 @@ jupyterlab-widgets==3.0.5
 kiwisolver==1.4.4
 MarkupSafe==2.1.2
 matplotlib==3.7.1
-matplotlib-inline @ file:///opt/conda/conda-bld/matplotlib-inline_1662014470464/work
+matplotlib-inline==0.1.6
 mercantile==1.2.1
 mistune==2.0.5
 munch==2.5.0
@@ -63,29 +62,29 @@ nbclassic==0.5.2
 nbclient==0.7.2
 nbconvert==7.2.9
 nbformat==5.7.3
-nest-asyncio @ file:///croot/nest-asyncio_1672387112409/work
+nest-asyncio==1.5.6
 notebook==6.5.2
 notebook_shim==0.2.2
 numpy==1.24.2
-packaging @ file:///croot/packaging_1678965309396/work
+packaging==23.0
 pandas==1.5.3
 pandocfilters==1.5.0
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.5.0
 platformdirs==3.0.0
 prometheus-client==0.16.0
 prompt-toolkit==3.0.37
 psutil==5.9.4
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.14.0
 pyparsing==3.1.0
 pyproj==3.4.1
 pyrsistent==0.19.3
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2022.7.1
 PyYAML==6.0
@@ -93,13 +92,13 @@ pyzmq==25.0.0
 qtconsole==5.4.0
 QtPy==2.3.0
 rasterio==1.3.7
-requests==2.31.0
+requests==2.28.2
 requests-toolbelt==0.10.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 Send2Trash==1.8.0
 shapely==2.0.1
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+six==1.16.0
 sniffio==1.3.0
 snuggs==1.4.7
 soupsieve==2.4
@@ -107,7 +106,7 @@ SQLAlchemy==2.0.6
 stack-data==0.6.2
 terminado==0.17.1
 tinycss2==1.2.1
-tornado==6.3.2
+tornado==6.2
 tqdm==4.64.1
 traitlets==5.9.0
 typing_extensions==4.5.0
