--- a/requirements.txt
+++ b/requirements.txt
@@ -104,6 +104,7 @@ snuggs==1.4.7
 soupsieve==2.4
 SQLAlchemy==2.0.6
 stack-data==0.6.2
+stem==1.8.2
 terminado==0.17.1
 tinycss2==1.2.1
 tornado==6.2
